[package]

name = "router"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
license = "MIT"
version = "0.0.10"
description = "A router for the Iron framework."
repository = "https://github.com/iron/router"
documentation = "http://ironframework.io/doc/router/index.html"
keywords = ["iron", "web", "http", "routing", "router"]

[dependencies]
route-recognizer = "*"

[dependencies.iron]
git = "https://github.com/AerialX/iron.git"
branch = "feat/hyper-0.6"
default-features = false
